--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "clean": "gulp clean",
     "build": "npm run clean && npm run dist && npm run pack",
     "test": "karma start karma.conf.js --log-level debug --single-run",
-    "build:test": "npm run build && karma start karma_dist.conf.js --log-level debug --single-run"
+    "test:dist": "karma start karma_dist.conf.js --log-level debug --single-run",
+    "build:test": "npm run build && npm run test:dist",
+    "start:dist": "gulp webserver:dist",
+    "jshint": "gulp jshint"
   },
   "repository": {
     "type": "git",
@@ -28,11 +31,13 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-gzip": "^1.4.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-minifier": "^0.1.4",
     "gulp-rm": "^1.0.4",
     "gulp-tar": "^2.0.0",
     "gulp-webserver": "^0.9.1",
     "jasmine-core": "^2.7.0",
+    "jshint": "^2.9.5",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
