Se agrega jshint a los tests

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp webserver",
-    "bower:install": "bower install",
+    "install": "echo bower install",
     "dist": "gulp minify",
     "pack": "gulp pack",
     "clean": "gulp clean",
     "build": "npm run clean && npm run dist && npm run pack",
-    "test": "karma start karma.conf.js --log-level debug --single-run",
+    "test": "karma start karma.conf.js --log-level debug --single-run && npm run jshint",
     "test:dist": "karma start karma_dist.conf.js --log-level debug --single-run",
     "build:test": "npm run build && npm run test:dist",
     "start:dist": "gulp webserver:dist",
