--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 node_js:
   - "7"
+addons:
+  firefox: "49.0"
 script:
   - npm test
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  - npm run test:functional
   - npm run jsdoc
 after_success:
   - scripts/deploy_docs.sh
