--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,28 @@
-sudo: required
 language: node_js
 node_js:
   - "7"
 language: python
 python:
   - "3.4"
+
 install:
-  - sudo pip install selenium
+  - pip install selenium
+
 addons:
   firefox: "49.0"
+
 script:
+  - npm install
   - npm test
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - npm run test:functional
   - npm run jsdoc
+
 after_success:
   - scripts/deploy_docs.sh
+
 env:
   global:
     secure:
