--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ language: python
 python:
   - "3.4"
 
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.11.1-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
+
 install:
   - pip install selenium
 
