--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,11 @@ build:
     debug: true
     commands:
       - echo functional testing
-      - env python3 test/functional/*.py
+      - wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
+      - mkdir geckodriver
+      - tar -xzf geckodriver-*-linux64.tar.gz -C geckodriver
+      - export PATH=$PATH:$PWD/geckodriver
+      - env python test/functional/*.py
     when:
       branch: develop
   construccion:
