--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,15 @@
 language: node_js
 node_js:
   - "7"
-language: python
-python:
-  - "3.4"
-
-before_install:
-  - wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
-  - mkdir geckodriver
-  - tar -xzf geckodriver-*-linux64.tar.gz -C geckodriver
-  - export PATH=$PATH:$PWD/geckodriver
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 5 # give xvfb some time to start
 
 install:
   - pip install selenium
 
-addons:
-  firefox: "55.0.3"
-
 script:
   - npm install
   - npm test
-  - npm run test:functional
   - npm run jsdoc
+  - docker-compose exec selenium python3 /app/test/functional/toc_test.py
 
 after_success:
   - scripts/deploy_docs.sh
