Try to fix 3 drone and travis

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ build:
     debug: true
     commands:
       - echo functional testing
-      - python3 test/functional/*.py
+      - bash scripts/docker_tests.sh
     when:
       branch: develop
   construccion:
